--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,44 @@
 # The Python Worker is managed by the Azure Functions platform
 # Manually managing azure-functions-worker may cause unexpected issues
 
-azure-functions
-requests
-pandas
-kaggle
-scikit-learn
-imbalanced-learn
-matplotlib
-seaborn
-joblib
-pytest
-flake8
-coverage
+azure-functions==1.21.3
+bleach==6.2.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+contourpy==1.3.1
+coverage==7.6.10
+cycler==0.12.1
+flake8==7.1.1
+fonttools==4.55.7
+idna==3.10
+imbalanced-learn==0.13.0
+iniconfig==2.0.0
+joblib==1.4.2
+kaggle==1.6.17
+kiwisolver==1.4.8
+matplotlib==3.10.0
+mccabe==0.7.0
+numpy==2.2.2
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+pluggy==1.5.0
+pycodestyle==2.12.1
+pyflakes==3.2.0
+pyparsing==3.2.1
+pytest==8.3.4
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+pytz==2024.2
+requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.1
+seaborn==0.13.2
+six==1.17.0
+sklearn-compat==0.1.3
+text-unidecode==1.3
+threadpoolctl==3.5.0
+tqdm==4.67.1
+tzdata==2025.1
+urllib3==2.3.0
+webencodings==0.5.1
