--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pycodestyle==2.12.1
 pyflakes==3.2.0
 pyparsing==3.2.1
 pytest==8.3.4
+pytest-cov
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 pytz==2024.2
